--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="24dp"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".AlCuadradoView">
 
     <EditText
         android:id="@+id/et_introduce_numero"
